--- a/src/main/resources/theme/play/generate_map.fxml
+++ b/src/main/resources/theme/play/generate_map.fxml
@@ -35,18 +35,18 @@
         <RowConstraints/>
     </rowConstraints>
     <children>
-        <Label styleClass="h2" text="%game.generate.recreate" GridPane.columnIndex="0" GridPane.rowIndex="0"
+        <Label styleClass="h2" text="%game.generateMap.recreate" GridPane.columnIndex="0" GridPane.rowIndex="0"
                GridPane.columnSpan="2147483647"/>
-        <Label text="%game.generate.generatedName" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+        <Label text="%game.generateMap.generatedName" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
         <TextField fx:id="previousMapName" maxHeight="Infinity"
                    promptText="nerxois_map_generator_(version)_(seed)_(options)" style="-fx-pref-width: 5em"
                    GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1">
             <tooltip>
-                <Tooltip text="%game.generate.nameCaution"/>
+                <Tooltip text="%game.generateMap.nameCaution"/>
             </tooltip>
         </TextField>
         <Separator GridPane.columnSpan="2147483647" GridPane.rowIndex="2"/>
-        <Label styleClass="h2" text="%game.generate.generateNew" GridPane.columnIndex="0" GridPane.rowIndex="3"
+        <Label styleClass="h2" text="%game.generateMap.generateNew" GridPane.columnIndex="0" GridPane.rowIndex="3"
                GridPane.columnSpan="2147483647"/>
         <Label text="%game.create.spawnCount" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
         <Spinner fx:id="spawnCountSpinner" maxHeight="Infinity" style="-fx-pref-width: 6.5em" GridPane.columnIndex="1"
@@ -62,51 +62,51 @@
                 <Tooltip text="%game.create.mapSize"/>
             </tooltip>
         </Spinner>
-        <Label text="%game.generate.waterSlider" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+        <Label text="%game.generateMap.waterSlider" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
         <HBox fx:id="waterRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="6">
-            <Label text="%game.generate.random"/>
+            <Label text="%game.generateMap.random"/>
             <CheckBox fx:id="waterRandom"/>
         </HBox>
         <HBox fx:id="waterSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="6">
-            <Label text="%game.generate.none"/>
+            <Label text="%game.generateMap.none"/>
             <Slider fx:id="waterSlider" max="127" maxHeight="Infinity" HBox.hgrow="ALWAYS"/>
-            <Label text="%game.generate.lots"/>
+            <Label text="%game.generateMap.lots"/>
         </HBox>
-        <Label text="%game.generate.plateauSlider" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
+        <Label text="%game.generateMap.plateauSlider" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
         <HBox fx:id="plateauRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="7">
-            <Label text="%game.generate.random"/>
+            <Label text="%game.generateMap.random"/>
             <CheckBox fx:id="plateauRandom"/>
         </HBox>
         <HBox fx:id="plateauSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="7">
-            <Label text="%game.generate.none"/>
+            <Label text="%game.generateMap.none"/>
             <Slider fx:id="plateauSlider" max="127" maxHeight="Infinity" HBox.hgrow="ALWAYS"/>
-            <Label text="%game.generate.lots"/>
+            <Label text="%game.generateMap.lots"/>
         </HBox>
-        <Label text="%game.generate.mountainSlider" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
+        <Label text="%game.generateMap.mountainSlider" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
         <HBox fx:id="mountainRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="8">
-            <Label text="%game.generate.random"/>
+            <Label text="%game.generateMap.random"/>
             <CheckBox fx:id="mountainRandom"/>
         </HBox>
         <HBox fx:id="mountainSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="8">
-            <Label text="%game.generate.none"/>
+            <Label text="%game.generateMap.none"/>
             <Slider fx:id="mountainSlider" max="127" maxHeight="Infinity" HBox.hgrow="ALWAYS"/>
-            <Label text="%game.generate.lots"/>
+            <Label text="%game.generateMap.lots"/>
         </HBox>
-        <Label text="%game.generate.rampSlider" GridPane.columnIndex="0" GridPane.rowIndex="9"/>
+        <Label text="%game.generateMap.rampSlider" GridPane.columnIndex="0" GridPane.rowIndex="9"/>
         <HBox fx:id="rampRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="9">
-            <Label text="%game.generate.random"/>
+            <Label text="%game.generateMap.random"/>
             <CheckBox fx:id="rampRandom"/>
         </HBox>
         <HBox fx:id="rampSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="9">
-            <Label text="%game.generate.none"/>
+            <Label text="%game.generateMap.none"/>
             <Slider fx:id="rampSlider" max="127" maxHeight="Infinity" HBox.hgrow="ALWAYS"/>
-            <Label text="%game.generate.lots"/>
+            <Label text="%game.generateMap.lots"/>
         </HBox>
 
 
         <Button fx:id="generateMapButton" alignment="CENTER_LEFT" contentDisplay="RIGHT" defaultButton="true"
                 mnemonicParsing="false" onAction="#onGenerateMapButtonClicked" styleClass="game-generate-map"
-                text="%game.generate" GridPane.columnIndex="0" GridPane.rowIndex="10">
+                text="%game.generateMap" GridPane.columnIndex="0" GridPane.rowIndex="10">
         </Button>
 
         <!-- Cancel, Ok -->
