--- a/src/main/resources/theme/vault/map/map_card.fxml
+++ b/src/main/resources/theme/vault/map/map_card.fxml
@@ -6,21 +6,21 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.Region?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mapTileRoot" hgap="10.0" onMouseClicked="#onShowMapDetail"
-          prefWidth="224.0" styleClass="card,pointable" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141"
+          prefWidth="224.0" styleClass="card, pointable, hoverable" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141"
           fx:controller="com.faforever.client.map.MapCardController">
-  <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-  </columnConstraints>
-  <rowConstraints>
-      <RowConstraints fillHeight="false" minHeight="10.0" vgrow="ALWAYS"/>
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints fillHeight="false" minHeight="10.0" vgrow="ALWAYS"/>
+        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
   </rowConstraints>
   <children>
