--- a/src/main/resources/theme/vault/map/map_card.fxml
+++ b/src/main/resources/theme/vault/map/map_card.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -26,6 +27,20 @@
   <children>
       <ImageView fx:id="thumbnailImageView" fitHeight="224.0" fitWidth="224.0" pickOnBounds="true" preserveRatio="true"
                  GridPane.columnSpan="2147483647" GridPane.halignment="CENTER"/>
+      <VBox alignment="TOP_RIGHT" spacing="10.0" GridPane.columnSpan="2147483647" GridPane.valignment="TOP" GridPane.vgrow="NEVER"
+            GridPane.hgrow="NEVER">
+          <children>
+              <Button fx:id="installButton" defaultButton="true"
+                      mnemonicParsing="false" onAction="#onInstallButtonClicked"
+                      text="%mapVault.install"/>
+              <Button fx:id="uninstallButton" mnemonicParsing="false"
+                      onAction="#onUninstallButtonClicked"
+                      text="%mapVault.uninstall"/>
+          </children>
+          <GridPane.margin>
+              <Insets top="10.0" right="10.0"/>
+          </GridPane.margin>
+      </VBox>
       <VBox alignment="BOTTOM_LEFT" styleClass="image-dimmer" GridPane.columnSpan="2147483647" GridPane.hgrow="NEVER"
             GridPane.valignment="BOTTOM" GridPane.vgrow="NEVER">
           <children>
