--- a/src/main/resources/theme/vault/mod/mod_detail.fxml
+++ b/src/main/resources/theme/vault/mod/mod_detail.fxml
@@ -43,7 +43,7 @@
                                             </children>
                                         </VBox>
                                         <Button fx:id="uninstallButton" mnemonicParsing="false" onAction="#onUninstallButtonClicked" text="%modVault.uninstall" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                                        <Button fx:id="installButton" mnemonicParsing="false" onAction="#onInstallButtonClicked" styleClass="highlighted-button" text="%modVault.install" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                                        <Button fx:id="installButton" defaultButton="true" mnemonicParsing="false" onAction="#onInstallButtonClicked" styleClass="highlighted-button" text="%modVault.install" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
                               <VBox GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <children>
                                     <Label fx:id="authorLabel" text="&lt;Author&gt;" />
