--- a/src/main/resources/theme/vault/map/map_card.fxml
+++ b/src/main/resources/theme/vault/map/map_card.fxml
@@ -31,11 +31,17 @@
             GridPane.hgrow="NEVER">
           <children>
               <Button fx:id="installButton" defaultButton="true"
-                      mnemonicParsing="false" onAction="#onInstallButtonClicked"
-                      text="%mapVault.install"/>
+                      mnemonicParsing="false" onAction="#onInstallButtonClicked">
+                  <graphic>
+                      <Region styleClass="icon,install-icon"/>
+                  </graphic>
+              </Button>
               <Button fx:id="uninstallButton" mnemonicParsing="false"
-                      onAction="#onUninstallButtonClicked"
-                      text="%mapVault.uninstall"/>
+                      onAction="#onUninstallButtonClicked">
+                  <graphic>
+                      <Region styleClass="icon,uninstall-icon"/>
+                  </graphic>
+              </Button>
           </children>
           <GridPane.margin>
               <Insets top="10.0" right="10.0"/>
