--- a/src/main/resources/theme/vault/mod/mod_card.fxml
+++ b/src/main/resources/theme/vault/mod/mod_card.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="modTileRoot" hgap="10.0" onMouseClicked="#onShowModDetail"
           prefWidth="200.0" styleClass="card, pointable, hoverable" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141"
           fx:controller="com.faforever.client.mod.ModCardController">
@@ -28,6 +31,26 @@
               <Insets top="10.0"/>
           </GridPane.margin>
       </ImageView>
+      <VBox alignment="TOP_RIGHT" spacing="10.0" GridPane.columnSpan="2147483647" GridPane.valignment="TOP" GridPane.vgrow="NEVER"
+            GridPane.hgrow="NEVER">
+          <children>
+              <Button fx:id="installButton" defaultButton="true"
+                      mnemonicParsing="false" onAction="#onInstallButtonClicked">
+                  <graphic>
+                      <Region styleClass="icon,install-icon"/>
+                  </graphic>
+              </Button>
+              <Button fx:id="uninstallButton" mnemonicParsing="false"
+                      onAction="#onUninstallButtonClicked">
+                  <graphic>
+                      <Region styleClass="icon,uninstall-icon"/>
+                  </graphic>
+              </Button>
+          </children>
+          <GridPane.margin>
+              <Insets top="10.0" right="10.0"/>
+          </GridPane.margin>
+      </VBox>
       <Label fx:id="nameLabel" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308"
              text="Long text to test whether it's being wrapped" wrapText="true" GridPane.columnSpan="2147483647"
              GridPane.rowIndex="1" GridPane.valignment="TOP">
