--- a/src/main/resources/theme/leaderboard/leaderboard.fxml
+++ b/src/main/resources/theme/leaderboard/leaderboard.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXSpinner?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.Region?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="leaderboardRoot" alignment="CENTER" maxHeight="1.7976931348623157E308"
-      maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.60"
-      fx:controller="com.faforever.client.leaderboard.LeaderboardController">
+<?import javafx.scene.layout.VBox?>
+
+<VBox fx:id="leaderboardRoot" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.leaderboard.LeaderboardController">
   <children>
     <VBox fx:id="contentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
       <children>
@@ -22,31 +22,30 @@
                       <Region styleClass="icon,search-icon" />
                     </graphic>
                   </Label>
-                   <TextField fx:id="searchTextField" maxWidth="1.7976931348623157E308"
-                                 promptText="%ladder.searchPrompt" HBox.hgrow="ALWAYS"/>
+                   <TextField fx:id="searchTextField" maxWidth="1.7976931348623157E308" promptText="%ladder.searchPrompt" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
-        <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                   minHeight="0.0" minWidth="0.0" VBox.vgrow="ALWAYS" >
+        <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" VBox.vgrow="ALWAYS">
           <columns>
-            <TableColumn fx:id="rankColumn" text="Rank"/>
-            <TableColumn fx:id="nameColumn" text="Name"/>
-            <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio" visible="false"/>
-            <TableColumn fx:id="gamesPlayedColumn" text="Games Played"/>
-            <TableColumn fx:id="ratingColumn" text="Rating"/>
+            <TableColumn fx:id="rankColumn" text="Rank" />
+            <TableColumn fx:id="nameColumn" text="Name" />
+            <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio" visible="false" />
+            <TableColumn fx:id="gamesPlayedColumn" text="Games Played" />
+            <TableColumn fx:id="ratingColumn" text="Rating" />
           </columns>
           <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
           </columnResizePolicy>
         </TableView>
       </children>
         <padding>
-            <Insets top="10.0"/>
+            <Insets top="10.0" />
         </padding>
     </VBox>
+      <Pagination fx:id="paginationControl" prefHeight="57.0" prefWidth="322.0" />
     <VBox fx:id="connectionProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
       <children>
-        <JFXSpinner prefHeight="80.0" prefWidth="80.0"/>
+        <JFXSpinner prefHeight="80.0" prefWidth="80.0" />
         <Label text="%leaderboard.loading">
           <VBox.margin>
             <Insets />
