--- a/src/main/resources/theme/play/team_matchmaking.fxml
+++ b/src/main/resources/theme/play/team_matchmaking.fxml
@@ -81,6 +81,7 @@
                     </HBox>
                     <FlowPane fx:id="partyMemberPane" hgap="35" vgap="23" />
                     <Separator />
+                    <Label styleClass="h1-tmm, uppercase" text="%teammatchmaking.queueTitle" />
                     <HBox fx:id="queueBox" spacing="12.0" />
                 </children>
             </VBox>
