--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -1036,7 +1036,7 @@
 .h1-tmm {
   -fx-font-size: 24px;
   -fx-padding: -9 0 -9 16;
-  -fx-text-fill: #4d4d4d;
+  -fx-text-fill: #5f5f5f;
   -fx-font-family: 'Source Sans Pro Semibold';
 }
 
