--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
@@ -28,17 +28,18 @@
             <JFXButton fx:id="kickPlayerButton" onAction="#onKickPlayerButtonClicked" text=""
                        styleClass="icon-button" />
         </HBox>
-        <HBox spacing="5.0" alignment="CENTER_LEFT">
+        <HBox spacing="15.0" alignment="CENTER_LEFT">
             <children>
-                <Label fx:id="ratingLabel, uppercase" text="%teammatchmaking.rating" styleClass="player-card-text" />
-                <Label fx:id="gameCountLabel, uppercase" text="%teammatchmaking.gameCount" styleClass="player-card-text" />
+                <Label fx:id="ratingLabel" text="%teammatchmaking.rating" styleClass="player-card-text, uppercase" />
+                <Label fx:id="gameCountLabel" text="%teammatchmaking.gameCount" styleClass="player-card-text, uppercase" />
                 <Pane HBox.hgrow="ALWAYS" />
                 <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="36.0" preserveRatio="true" />
-                <Pane prefWidth="15.0"/>
-                <Label fx:id="uefLabel" styleClass="icon, factionindicator, uef" text="" />
-                <Label fx:id="cybranLabel" styleClass="icon, factionindicator, cybran" text=""/>
-                <Label fx:id="aeonLabel" styleClass="icon, factionindicator, aeon" text=""/>
-                <Label fx:id="seraphimLabel" styleClass="icon, factionindicator, seraphim" text="" HBox.hgrow="ALWAYS"/>
+                <HBox spacing="5.0" alignment="CENTER_LEFT">
+                    <Label fx:id="uefLabel" styleClass="icon, factionindicator, uef" text="" />
+                    <Label fx:id="cybranLabel" styleClass="icon, factionindicator, cybran" text=""/>
+                    <Label fx:id="aeonLabel" styleClass="icon, factionindicator, aeon" text=""/>
+                    <Label fx:id="seraphimLabel" styleClass="icon, factionindicator, seraphim" text="" HBox.hgrow="ALWAYS"/>
+                </HBox>
             </children>
         </HBox>
     <padding>
