--- a/src/main/resources/theme/vault/mod/mod_card.fxml
+++ b/src/main/resources/theme/vault/mod/mod_card.fxml
@@ -84,10 +84,20 @@
       </Label>
       <Label text="%map.created" GridPane.rowIndex="4">
           <padding>
+              <Insets left="10.0" right="10.0"/>
+          </padding>
+      </Label>
+      <Label fx:id="createdLabel" text="&lt;Created&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+          <padding>
+              <Insets left="10.0" right="10.0"/>
+          </padding>
+      </Label>
+      <Label text="%map.updated" GridPane.rowIndex="5">
+          <padding>
               <Insets bottom="10.0" left="10.0" right="10.0"/>
           </padding>
       </Label>
-      <Label fx:id="createdLabel" text="&lt;Updated&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <Label fx:id="updatedLabel" text="&lt;Updated&gt;" GridPane.columnIndex="1" GridPane.rowIndex="5">
           <padding>
               <Insets bottom="10.0" left="10.0" right="10.0"/>
           </padding>
