--- a/src/main/resources/theme/chat/channel_tab.fxml
+++ b/src/main/resources/theme/chat/channel_tab.fxml
@@ -15,7 +15,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 <?import javafx.scene.web.WebView?>
-
 <Tab fx:id="channelTabRoot" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.chat.ChannelTabController">
   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" onKeyReleased="#onKeyReleased">
     <children>
@@ -33,44 +32,62 @@
                           <WebView fx:id="messagesWebView" minHeight="100.0" minWidth="100.0" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                           <HBox fx:id="searchFieldContainer" visible="false" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                               <children>
-                                  <Button fx:id="closeSearchFieldButton" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" onAction="#onSearchFieldClose" styleClass="close-search-text-button">
+                                  <Button fx:id="closeSearchFieldButton" focusTraversable="false" minHeight="-Infinity"
+                                          minWidth="-Infinity" onAction="#onSearchFieldClose"
+                                          styleClass="close-search-text-button">
                                       <graphic>
                                           <StackPane>
-                                              <Region minHeight="-Infinity" minWidth="-Infinity" styleClass="icon,close-icon" />
+                                              <Region minHeight="-Infinity" minWidth="-Infinity"
+                                                      styleClass="icon,close-icon"/>
                                           </StackPane>
                                       </graphic>
                                   </Button>
-                                  <TextField fx:id="searchField" promptText="%chat.filter.prompt" visible="false" />
+                                  <TextField fx:id="searchField" promptText="%chat.filter.prompt" visible="false"/>
                               </children>
                           </HBox>
+                          <ToggleButton fx:id="toggleSidePaneButton" selected="true" mnemonicParsing="false"
+                                        styleClass="pane-toggler, right" AnchorPane.rightAnchor="0.0"
+                                        AnchorPane.topAnchor="40.0">
+                              <graphic>
+                                  <Region styleClass="icon,toggle-icon"/>
+                              </graphic>
+                          </ToggleButton>
                       </children>
                   </AnchorPane>
-                    <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage" promptText="%chat.messagePrompt">
-                    </TextField>
+                   <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage"
+                              promptText="%chat.messagePrompt">
+                   </TextField>
                </children>
             </VBox>
 
-          <VBox fx:id="channelTabScrollPaneVBox" maxHeight="1.7976931348623157E308" styleClass="chat-channel-users-pane" SplitPane.resizableWithParent="false">
-            <children>
-              <HBox alignment="CENTER" spacing="10.0">
+            <VBox fx:id="channelTabScrollPaneVBox" maxHeight="1.7976931348623157E308"
+                  styleClass="chat-channel-users-pane" SplitPane.resizableWithParent="false" minWidth="300.0">
                 <children>
-                    <TextField fx:id="userSearchTextField" maxWidth="1.7976931348623157E308" minWidth="10.0" prefColumnCount="5" HBox.hgrow="ALWAYS" />
-                    <ToggleButton fx:id="advancedUserFilter" mnemonicParsing="false" onAction="#onAdvancedUserFilter" HBox.hgrow="NEVER">
-                        <graphic>
-                            <Region styleClass="icon,filter-icon" />
-                        </graphic>
-                    </ToggleButton>
-                </children>
+                    <HBox alignment="CENTER" spacing="10.0">
+                        <children>
+                            <TextField fx:id="userSearchTextField" maxWidth="1.7976931348623157E308" minWidth="10.0"
+                                       prefColumnCount="5" HBox.hgrow="ALWAYS"/>
+                            <ToggleButton fx:id="advancedUserFilter" mnemonicParsing="false"
+                                          onAction="#onAdvancedUserFilter" HBox.hgrow="NEVER">
+                                <graphic>
+                                    <Region styleClass="icon,filter-icon"/>
+                                </graphic>
+                            </ToggleButton>
+                        </children>
                         <VBox.margin>
-                           <Insets left="10.0" right="10.0" />
+                            <Insets left="10.0" right="10.0"/>
                         </VBox.margin>
-              </HBox>
-              <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-                    <children>
-                        <ListView fx:id="chatUserListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="chat-user-list-view" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                        </ListView>
-                    </children>
-              </AnchorPane>
+                    </HBox>
+                    <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                                VBox.vgrow="ALWAYS">
+                        <children>
+                            <ListView fx:id="chatUserListView" maxHeight="1.7976931348623157E308"
+                                      maxWidth="1.7976931348623157E308" styleClass="chat-user-list-view"
+                                      AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            </ListView>
+                        </children>
+                    </AnchorPane>
             </children>
           </VBox>
         </SplitPane>
