--- a/src/main/resources/theme/leaderboard/leaderboard.fxml
+++ b/src/main/resources/theme/leaderboard/leaderboard.fxml
@@ -1,52 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXSpinner?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.Region?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="leaderboardRoot" alignment="CENTER" maxHeight="1.7976931348623157E308"
-      maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.60"
-      fx:controller="com.faforever.client.leaderboard.LeaderboardController">
-  <children>
-    <VBox fx:id="contentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
-      <children>
-            <HBox alignment="CENTER_LEFT" spacing="10.0">
+<?import com.jfoenix.controls.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+
+<VBox fx:id="leaderboardRoot" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.leaderboard.LeaderboardController">
+   <children>
+      <HBox fx:id="contentPane" spacing="20.0">
+        <children>
+          <VBox spacing="20.0" VBox.vgrow="ALWAYS" prefWidth="600">
+            <children>
+                <HBox alignment="CENTER_LEFT" spacing="10.0">
+                <children>
+                    <Label text="Season 2020" styleClass="heading, season"/>
+                    <Pane HBox.hgrow="ALWAYS" />
+                    <HBox alignment="CENTER_LEFT" spacing="10.0">
+                        <Label contentDisplay="RIGHT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308">
+                            <graphic>
+                                <Region styleClass="icon,search-icon" />
+                            </graphic>
+                        </Label>
+                        <TextField fx:id="searchTextField" maxWidth="1.7976931348623157E308" minWidth="120.0" prefWidth="120.0" promptText="SEARCH PLAYER..." styleClass="search" />
+                    </HBox>
+                 </children>
+                </HBox>
+                <HBox alignment="BOTTOM_LEFT" spacing="10.0" styleClass="division-box">
+                    <ComboBox promptText="GOLD" styleClass="division-selector" >
+                        <items>
+                        </items>
+                    </ComboBox>
+                    <Pane HBox.hgrow="ALWAYS" />
+                    <HBox fx:id="subdivisionPane" alignment="BOTTOM_RIGHT" >
+                        <ToggleButton mnemonicParsing="false" styleClass="main-navigation-button" prefWidth="70" text="I"/>
+                        <ToggleButton mnemonicParsing="false" styleClass="main-navigation-button" prefWidth="70" text="II"/>
+                        <ToggleButton mnemonicParsing="false" styleClass="main-navigation-button" prefWidth="70" text="III"/>
+                        <ToggleButton mnemonicParsing="false" styleClass="main-navigation-button" prefWidth="70" text="IV" selected="true"/>
+                        <ToggleButton mnemonicParsing="false" styleClass="main-navigation-button" prefWidth="70" text="V"/>
+                    </HBox>
+                </HBox>
+                <TableView fx:id="ratingTable" minWidth="350.0" VBox.vgrow="ALWAYS">
+                <columns>
+                  <TableColumn fx:id="rankColumn" prefWidth="60" text="RANK" />
+                  <TableColumn fx:id="nameColumn" prefWidth="${ratingTable.width - 220}" text="NAME" />
+                  <TableColumn fx:id="divisionColumn" prefWidth="60" text="DIVISION" visible="false" />
+                  <TableColumn fx:id="scoreColumn" prefWidth="80" text="SCORE" />
+                  <TableColumn fx:id="gamesPlayedColumn" prefWidth="80" text="GAMES" />
+                </columns>
+
+                </TableView>
+                </children>
+                <padding>
+                  <Insets top="10.0" />
+                </padding>
+          </VBox>
+            <VBox alignment="BOTTOM_LEFT" spacing="40.0">
                <children>
-                  <Label contentDisplay="RIGHT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308">
-                    <graphic>
-                      <Region styleClass="icon,search-icon" />
-                    </graphic>
-                  </Label>
-                   <TextField fx:id="searchTextField" maxWidth="1.7976931348623157E308"
-                                 promptText="%ladder.searchPrompt" HBox.hgrow="ALWAYS"/>
+                  <HBox>
+                     <children>
+                       <VBox alignment="TOP_CENTER" spacing="20.0">
+                         <StackPane minWidth="180">
+                           <Group>
+                             <Circle centerX="50" centerY="50" radius="80" styleClass="score-circle" />
+                             <Arc centerX="50" centerY="50" length="-216" radiusX="80" radiusY="80" startAngle="90" styleClass="score-arc" />
+                           </Group>
+                           <Label styleClass="score" text="6"/>
+                         </StackPane>
+                         <Label styleClass="heading" text="SCORE" />
+                       </VBox>
+                       <Pane minWidth="20.0" HBox.hgrow="ALWAYS" />
+                       <VBox alignment="BOTTOM_CENTER" spacing="20.0">
+                         <Label prefHeight="160" prefWidth="320" styleClass="map-preview" />
+                         <ImageView fitHeight="0.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" />
+                         <Label styleClass="heading" text="SILVER II" />
+                       </VBox>
+                     </children>
+                    <padding>
+                      <Insets left="80.0" right="80.0" top="10.0" />
+                    </padding>
+                  </HBox>
+                 <GridPane maxWidth="898" styleClass="player-card">
+                   <columnConstraints>
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                   </columnConstraints>
+                   <rowConstraints>
+                     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                   </rowConstraints>
+                   <children>
+                     <BarChart fx:id="ratingDistributionChart" categoryGap="4.0" prefHeight="300.0" prefWidth="878.0" title="Player Distribution">
+                       <xAxis>
+                         <CategoryAxis fx:id="ratingDistributionXAxis" animated="false" label="Leagues" side="BOTTOM" tickLabelGap="0.0" />
+                       </xAxis>
+                       <yAxis>
+                         <NumberAxis fx:id="ratingDistributionYAxis" side="LEFT" />
+                       </yAxis>
+                     </BarChart>
+                   </children>
+                   <padding>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                   </padding>
+                 </GridPane>
                </children>
-            </HBox>
-        <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                   minHeight="0.0" minWidth="0.0" VBox.vgrow="ALWAYS" >
-          <columns>
-            <TableColumn fx:id="rankColumn" text="Rank"/>
-            <TableColumn fx:id="nameColumn" text="Name"/>
-            <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio" visible="false"/>
-            <TableColumn fx:id="gamesPlayedColumn" text="Games Played"/>
-            <TableColumn fx:id="ratingColumn" text="Rating"/>
-          </columns>
-          <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-          </columnResizePolicy>
-        </TableView>
-      </children>
+            </VBox>
+        </children>
         <padding>
-            <Insets top="10.0"/>
+          <Insets bottom="20.0" left="20.0" right="20.0" top="30.0" />
         </padding>
-    </VBox>
+      </HBox>
     <VBox fx:id="connectionProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
       <children>
-        <JFXSpinner prefHeight="80.0" prefWidth="80.0"/>
+        <JFXSpinner prefHeight="80.0" prefWidth="80.0" />
         <Label text="%leaderboard.loading">
           <VBox.margin>
             <Insets />
@@ -54,5 +121,5 @@
         </Label>
       </children>
     </VBox>
-  </children>
+   </children>
 </VBox>
