--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -698,6 +698,67 @@
   -fx-graphic-text-gap: 1em;
 }
 
+/***************** League leaderboard *****************/
+
+.score-arc {
+  -fx-fill: transparent;
+  -fx-stroke-width: 20;
+  -fx-stroke: CHART_COLOR_3;
+}
+
+.score-circle {
+  -fx-fill: transparent;
+  -fx-stroke-width: 20;
+  -fx-stroke: #1e1e1e;
+}
+
+.score {
+  -fx-font-size: 60px;
+  -fx-font-weight: 700;
+  -fx-text-fill: #ffffff;
+}
+
+.heading {
+  -fx-font-size: 24px;
+  -fx-padding: -9 0;
+  -fx-text-fill: #5f5f5f;
+  -fx-font-weight: 700;
+}
+
+.search {
+  -fx-font-size: 12px;
+  -fx-text-fill: #ffffff;
+}
+
+.season {
+  -fx-text-fill: #e0e0e0;
+}
+
+.division-box {
+  -fx-border-width: 0 0 2 0;
+  -fx-border-color: -fx-accent;
+}
+
+.division-selector {
+  -fx-border-width: 0;
+  -fx-font-size: 20px;
+  -fx-background-color: #1e1e1e;
+}
+
+.division-selector:showing {
+  -fx-font-size: 20px;
+  -fx-background-color: #1e1e1e;
+}
+/***************** Match maker *****************/
+
+.player-card {
+  -fx-background-color: #1e1e1e;
+  -fx-border-color: #636363;
+  -fx-background-radius: 9;
+  -fx-border-radius: 9;
+  -fx-border-width: 1;
+}
+
 /***************** Faction buttons *****************/
 
 .toggle-button.faction-button {
